# ostis-geography

./: .gitignore  .gitmodules  1j_pereulok_chapaeva.scs  1j_pereulok_jagovkina.scs  1j_pereulok_lazo.scs  1j_pereulok_volodarskogo.scs  1j_sverdlovskij_proezd.scs  2ja_aviatsionnaja_ulitsa.scs  2ja_gomselmashevskaja_ulitsa.scs  CMakeLists.txt  Dockerfile  README.md  agents_requirments.txt  apricot_street_minsk_1_.scs  bachilo_alesya_street_minsk_17_.scs  bagryantseva_street_minsk_4_.scs  baikalskaya_street_minsk_8_.scs  baku_street_minsk_9_.scs  baltic_street_minsk_10_.scs  baranovschina_street_minsk_13_.scs  base_1st_street_minsk_5_.scs  base_2nd_street_minsk_6_.scs  base_street_minsk_7_.scs  batorinskaya_street_minsk_16_.scs  beda_street_minsk_19_.scs  begomlskaya_street_minsk_18_.scs  belarusian_street_minsk_23_.scs  beletskogo_street_minsk_20_.scs  belinsky_street_minsk_21_.scs  belomorskaya_street_minsk_22_.scs  carolinskaya_street_minsk_94_.scs  chestnut_street_minsk_99_.scs  classes.scs  collective_farm_street_minsk_12_.scs  concept_school.scs  crimson_street_minsk_3_.scs  docker-compose.yml  dry_street_minsk_32_.scs  extreme_street_minsk_100_.scs  finally  (+197 more)
problem-solver/: CMakeLists.txt
problem-solver/cxx/: .gitignore  CMakeLists.txt
problem-solver/cxx/AdminModule/: AdminModule.cpp  AdminModule.hpp  CMakeLists.txt
problem-solver/cxx/AdminModule/agent/: GetAdminBuildingDistrict.cpp  GetAdminBuildingDistrict.hpp  GetAdminBuildingRegion.cpp  GetAdminBuildingRegion.hpp  GetEmbassy.cpp  GetEmbassy.hpp
problem-solver/cxx/AdminModule/keynodes/: AdminKeynodes.cpp  AdminKeynodes.hpp
problem-solver/cxx/CityModule/: CMakeLists.txt  CityModule.cpp  CityModule.hpp  CityService.hpp
problem-solver/cxx/CityModule/agents/: VilllageSearchAgent.hpp
problem-solver/cxx/CityModule/keynodes/: keynodes.hpp
problem-solver/cxx/LibrariesTownSearchModule/: CMakeLists.txt  LibrariesTownSearchModule.cpp  LibrariesTownSearchModule.hpp
problem-solver/cxx/MuseumsRegionSearchModule/: CMakeLists.txt  MuseumsRegionSearchModule.cpp  MuseumsRegionSearchModule.h  MuseumsRegionSearchModule.hpp
problem-solver/cxx/PharmacySearchByCityAndRegionAgentModule/: CMakeLists.txt  PharmacySearchByCityAndRegionAgentModule.cpp  PharmacySearchByCityAndRegionAgentModule.hpp
problem-solver/cxx/PotteryModule/: CMakeLists.txt  PotteryModule.cpp  PotteryModule.hpp
problem-solver/cxx/RiversModule/: CMakeLists.txt  RiversModule.cpp  RiversModule.hpp
problem-solver/cxx/SchoolSearchAgentModule/: CMakeLists.txt  SchoolSearchAgentModule.cpp  SchoolSearchAgentModule.hpp
problem-solver/cxx/SearchMinPathAgentModule/: CMakeLists.txt  SearchMinPathAgentModule.cpp
problem-solver/cxx/StatusAndDistrictSearchModule/: CMakeLists.txt  StatusAndDistrictSearchModule.cpp  StatusAndDistrictSearchModule.hpp
problem-solver/cxx/StreetSearchAgentModule/: CMakeLists.txt  StreetSearchAgentModule.cpp  StreetSearchAgentModule.hpp
problem-solver/cxx/TrashModule/: CMakeLists.txt  TrashModule.cpp  TrashModule.hpp
problem-solver/cxx/VillagesModule/: CMakeLists.txt  VillagesModule.cpp  VillagesModule.hpp
problem-solver/cxx/VitebskVillagesModule/: CMakeLists.txt  VitebskVillagesModule.cpp  VitebskVillagesModule.hpp
problem-solver/cxx/dance_studiosModule/: CMakeLists.txt  DanceStudiosModule.cpp  DanceStudiosModule.hpp
problem-solver/cxx/hotelModule/: CMakeLists.txt  HotelModule.cpp  HotelModule.hpp
problem-solver/cxx/modules/: CMakeLists.txt
problem-solver/py/: CMakeLists.txt  server.py
problem-solver/py/DistanceAgent/: CMakeLists.txt  DistanceModule.cpp  DistanceModule.hpp  DistanceService.hpp
problem-solver/py/HotelsModule/: CMakeLists.txt
problem-solver/py/LakesModule/: CMakeLists.txt  LakesModule.cpp  LakesModule.hpp  LakesService.hpp
problem-solver/py/MilasModule/: CMakeLists.txt  MilasModule.cpp  MilasModule.hpp  MilasService.hpp
problem-solver/py/OpenStreetMapAgent/: CMakeLists.txt  OpenStreetMapModule.cpp  OpenStreetMapModule.hpp  OpenStreetMapService.hpp
problem-solver/py/PopulationComparisonAgent/: CMakeLists.txt  PopulationComparisonModule.cpp  PopulationComparisonModule.hpp  PopulationComparisonService.hpp
problem-solver/py/SearchBanksByBrandAgent/: CMakeLists.txt  SearchBanksByBrandModule.cpp  SearchBanksByBrandModule.hpp  SearchBanksByBrandService.hpp
problem-solver/py/SearchBanksByCityAgent/: CMakeLists.txt  SearchBanksByCityModule.cpp  SearchBanksByCityModule.hpp  SearchBanksByCityService.hpp
problem-solver/py/SearchBanksByTypeAgent/: CMakeLists.txt  SearchBanksByTypeModule.cpp  SearchBanksByTypeModule.hpp  SearchBanksByTypeService.hpp
problem-solver/py/SearchPostOfficeByBrandAgent/: CMakeLists.txt  SearchPostOfficeByBrandModule.cpp  SearchPostOfficeByBrandModule.hpp  SearchPostOfficeByBrandService.hpp
problem-solver/py/SearchPostOfficeByCityAgent/: SearchPostOfficeByCityModule.cpp  SearchPostOfficeByCityModule.hpp  SearchPostOfficeByCityService.hpp
problem-solver/py/SearchPostOfficeByTypeAgent/: CMakeLists.txt  SearchPostOfficeByTypeModule.cpp  SearchPostOfficeByTypeModule.hpp  SearchPostOfficeByTypeService.hpp
problem-solver/py/StreetTranslatorModule/: CMakeLists.txt  StreetTranslatorModule.cpp  StreetTranslatorModule.hpp  StreetTranslatorService.hpp
problem-solver/py/VillagesPopulationAgent/: CMakeLists.txt  VillagesPopulationModule.cpp  VillagesPopulationModule.hpp  VillagesPopulationService.hpp
problem-solver/py/pharmaciesModule/: CMakeLists.txt  PharmaciesModule.cpp  PharmaciesModule.hpp  PharmaciesService.hpp
problem-solver/scp/agent_of_finding_quest_by_age_category/: agent_of_finding_quest_by_age_category.scs  lib_component_agent_of_finding_quest_by_age_category.scs  lib_component_ui_menu_file_for_finding_quest_by_age_category.scs  sc_agent_of_finding_quest_by_age_category.scs  ui_menu_file_for_finding_quest_by_age_category.scsi
problem-solver/scp/agent_of_finding_quest_by_city_and_street/: agent_of_finding_quest_by_city_and_street.scs  sc_agent_of_finding_quest_by_city_and_street.scs  ui_menu_file_for_finding_quest_by_city_and_street.scs
(+64357 files in other folders)
