add_subdirectory(AdminModule)
add_subdirectory(dance_studiosModule)
add_subdirectory(PotteryModule)
add_subdirectory(RiversModule)
add_subdirectory(VitebskVillagesModule)
add_subdirectory(StatusAndDistrictSearchModule)
add_subdirectory(VillagesModule)
add_subdirectory(StreetSearchAgentModule)
add_subdirectory(SchoolSearchAgentModule)
add_subdirectory(PharmacySearchByCityAndRegionAgentModule)
add_subdirectory(MuseumsRegionSearchModule)
