add_subdirectory(AdminModule)
add_subdirectory(DanceStudiosModule)
add_subdirectory(PotteryModule)
add_subdirectory(RiversModule)
add_subdirectory(VitebskVillagesModule)
add_subdirectory(StatusAndDistrictSearchModule)
add_subdirectory(VillagesModule)
add_subdirectory(StreetSearchAgentModule)
add_subdirectory(SchoolSearchAgentModule)
add_subdirectory(PharmacySearchByCityAndRegionAgentModule)
add_subdirectory(MuseumsModule)
add_subdirectory(hotelModule)
